fix alignment

--- a/views/stylesheets/celly.scss
+++ b/views/stylesheets/celly.scss
@@ -17,6 +17,7 @@ header {
   background: rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   margin-top: 20px;
+  text-align: center;
 }
 
 .the_button_area {
